<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
 	 <TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/food_preference_text"
    />
      <RadioGroup
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <RadioButton android:id="@+id/radio_full"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/select_full" />
      <RadioButton android:id="@+id/radio_vegan"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/select_vegan" />
      <RadioButton android:id="@+id/radio_vegetarian"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/select_vgt" />
    </RadioGroup>
    
    <TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/warning_vegan_veg"
    />
</LinearLayout>
